tests/baselines/reference/ParameterList13.errors.txt
==== tests/cases/compiler/ParameterList13.ts (1 errors) ====
    interface I {
        new (public x);
             ~~~~~~
!!! ParameterList13.ts(2,10): error TS2246: A parameter property is only allowed in a constructor implementation.
    }